parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    PUNTO

Grammar

Rule 0     S' -> program
Rule 1     program -> PROGRAMA ID neu_programa PUNTOYCOMA variables funciones PRINCIPAL neu_principal L_PAR R_PAR bloque neu_endPrograma empty
Rule 2     variables -> VARIABLES variablesU
Rule 3     variables -> empty
Rule 4     variablesU -> variablesD
Rule 5     variablesU -> empty
Rule 6     variablesD -> ID neu_addVariableAStack COMA variablesD
Rule 7     variablesD -> ID DOSPUNTOS tipo_var neu_addVariable PUNTOYCOMA variablesU
Rule 8     variablesD -> ID L_CORCHETE ENTEROVAL R_CORCHETE DOSPUNTOS tipo_var neu_addArreglo PUNTOYCOMA variablesU
Rule 9     funciones -> funcionesU
Rule 10    funciones -> empty
Rule 11    funcionesU -> tipo_funcion FUNCION ID neu_addFuncion L_PAR recibir_parametros R_PAR variables bloque neu_endFuncion funcionesD
Rule 12    funcionesD -> funciones
Rule 13    funcionesD -> empty
Rule 14    tipo_funcion -> ENTERO empty
Rule 15    tipo_funcion -> FLOTANTE empty
Rule 16    tipo_funcion -> CARACTER empty
Rule 17    tipo_funcion -> VOID empty
Rule 18    tipo_var -> ENTERO empty
Rule 19    tipo_var -> FLOTANTE empty
Rule 20    tipo_var -> CARACTER empty
Rule 21    recibir_parametros -> ID DOSPUNTOS tipo_var neu_recibirParametros recibir_parametrosD empty
Rule 22    recibir_parametros -> empty
Rule 23    recibir_parametrosD -> COMA recibir_parametros empty
Rule 24    recibir_parametrosD -> empty
Rule 25    mandar_parametros -> hiper_exp neu_parametroEnviado mandar_parametrosD empty
Rule 26    mandar_parametros -> empty
Rule 27    mandar_parametrosD -> COMA mandar_parametros empty
Rule 28    mandar_parametrosD -> empty
Rule 29    bloque -> L_LLAVE bloqueU R_LLAVE empty
Rule 30    bloqueU -> estatuto bloqueD neu_vaciarPilas empty
Rule 31    bloqueU -> empty
Rule 32    bloqueD -> bloqueU empty
Rule 33    bloqueD -> empty
Rule 34    estatuto -> asignacion PUNTOYCOMA empty
Rule 35    estatuto -> llamada neu_esEstatuto PUNTOYCOMA empty
Rule 36    estatuto -> retorno PUNTOYCOMA empty
Rule 37    estatuto -> lectura PUNTOYCOMA empty
Rule 38    estatuto -> escritura PUNTOYCOMA empty
Rule 39    estatuto -> decision empty
Rule 40    estatuto -> condicional empty
Rule 41    estatuto -> no_condicional empty
Rule 42    estatuto -> empty
Rule 43    asignacion -> ID neu_addID IGUAL neu_addOperador hiper_exp neu_asignacion empty
Rule 44    asignacion -> ID L_CORCHETE neu_fondoFalso hiper_exp R_CORCHETE neu_addIDArreglo IGUAL neu_addOperador hiper_exp neu_asignacion empty
Rule 45    llamada -> ID neu_llamada_era L_PAR mandar_parametros neu_paramValidacion R_PAR neu_llamada_gosub empty
Rule 46    retorno -> REGRESA L_PAR hiper_exp neu_retorno R_PAR empty
Rule 47    lectura -> LEER L_PAR ID neu_lectura R_PAR empty
Rule 48    escritura -> ESCRIBIR L_PAR escrituraD R_PAR empty
Rule 49    escrituraD -> hiper_exp neu_escritura empty
Rule 50    escrituraD -> LETRERO neu_letrero empty
Rule 51    decision -> SI L_PAR hiper_exp R_PAR neu_iniciarDecision ENTONCES bloque decisionU neu_endDecision empty
Rule 52    decisionU -> SINO neu_iniciarDecisionElse bloque empty
Rule 53    decisionU -> empty
Rule 54    condicional -> MIENTRAS L_PAR neu_condicionalAntes hiper_exp neu_condicionalDurante R_PAR HACER bloque neu_condicionalDespues empty
Rule 55    no_condicional -> DESDE L_PAR asignacionFor R_PAR HASTA hiper_exp neu_boolFor HACER bloque neu_endCondicion empty
Rule 56    asignacionFor -> ID neu_addIDFor IGUAL neu_addOperador hiper_exp neu_asignacionFor empty
Rule 57    operadorA -> MAS neu_addOperador empty
Rule 58    operadorA -> MENOS neu_addOperador empty
Rule 59    operadorT -> MULT neu_addOperador empty
Rule 60    operadorT -> DIV neu_addOperador empty
Rule 61    operadorL -> OR neu_addOperador empty
Rule 62    operadorL -> AND neu_addOperador empty
Rule 63    operadorR -> MENORQUE neu_addOperador empty
Rule 64    operadorR -> MAYORQUE neu_addOperador empty
Rule 65    operadorR -> MENORIGUALQUE neu_addOperador empty
Rule 66    operadorR -> MAYORIGUALQUE neu_addOperador empty
Rule 67    operadorR -> IGUALQUE neu_addOperador empty
Rule 68    operadorR -> DIFQUE neu_addOperador empty
Rule 69    hiper_exp -> super_exp neu_hacerHiperExp hiper_expU
Rule 70    hiper_expU -> operadorL hiper_exp empty
Rule 71    hiper_expU -> empty
Rule 72    super_exp -> exp neu_hacerSuperExp super_expU
Rule 73    super_expU -> operadorR super_exp empty
Rule 74    super_expU -> empty
Rule 75    exp -> termino neu_hacerExp expU
Rule 76    expU -> operadorA exp
Rule 77    expU -> empty
Rule 78    termino -> factor neu_hacerTermino terminoU
Rule 79    terminoU -> operadorT termino
Rule 80    terminoU -> empty
Rule 81    factor -> varcte empty
Rule 82    factor -> llamada neu_esExpresion empty
Rule 83    factor -> L_PAR hiper_exp R_PAR empty
Rule 84    varcte -> ID neu_addID empty
Rule 85    varcte -> ID L_CORCHETE neu_fondoFalso hiper_exp R_CORCHETE neu_addIDArreglo empty
Rule 86    varcte -> ENTEROVAL neu_addConstanteEntero empty
Rule 87    varcte -> FLOTANTEVAL neu_addConstanteFlotante empty
Rule 88    varcte -> CARACTERVAL neu_addConstanteCaracter empty
Rule 89    empty -> <empty>
Rule 90    neu_programa -> <empty>
Rule 91    neu_endPrograma -> <empty>
Rule 92    neu_addFuncion -> <empty>
Rule 93    neu_endFuncion -> <empty>
Rule 94    neu_principal -> <empty>
Rule 95    neu_addVariable -> <empty>
Rule 96    neu_addVariableAStack -> <empty>
Rule 97    neu_addArreglo -> <empty>
Rule 98    neu_addID -> <empty>
Rule 99    neu_fondoFalso -> <empty>
Rule 100   neu_addIDArreglo -> <empty>
Rule 101   neu_addConstanteEntero -> <empty>
Rule 102   neu_addConstanteFlotante -> <empty>
Rule 103   neu_addConstanteCaracter -> <empty>
Rule 104   neu_addTermino -> <empty>
Rule 105   neu_llamada_era -> <empty>
Rule 106   neu_llamada_gosub -> <empty>
Rule 107   neu_esEstatuto -> <empty>
Rule 108   neu_esExpresion -> <empty>
Rule 109   neu_addOperador -> <empty>
Rule 110   getGMemoria -> <empty>
Rule 111   getLMemoria -> <empty>
Rule 112   getCMemoria -> <empty>
Rule 113   neu_hacerTermino -> <empty>
Rule 114   neu_hacerExp -> <empty>
Rule 115   neu_hacerSuperExp -> <empty>
Rule 116   neu_hacerHiperExp -> <empty>
Rule 117   neu_asignacion -> <empty>
Rule 118   neu_lectura -> <empty>
Rule 119   neu_escritura -> <empty>
Rule 120   neu_letrero -> <empty>
Rule 121   neu_retorno -> <empty>
Rule 122   neu_iniciarDecision -> <empty>
Rule 123   neu_iniciarDecisionElse -> <empty>
Rule 124   neu_endDecision -> <empty>
Rule 125   neu_condicionalAntes -> <empty>
Rule 126   neu_condicionalDurante -> <empty>
Rule 127   neu_condicionalDespues -> <empty>
Rule 128   neu_addIDFor -> <empty>
Rule 129   neu_asignacionFor -> <empty>
Rule 130   neu_boolFor -> <empty>
Rule 131   neu_endCondicion -> <empty>
Rule 132   neu_parametroEnviado -> <empty>
Rule 133   neu_recibirParametros -> <empty>
Rule 134   neu_paramValidacion -> <empty>
Rule 135   neu_vaciarPilas -> <empty>
Rule 136   notifError -> <empty>

Terminals, with rules where they appear

AND                  : 62
CARACTER             : 16 20
CARACTERVAL          : 88
COMA                 : 6 23 27
DESDE                : 55
DIFQUE               : 68
DIV                  : 60
DOSPUNTOS            : 7 8 21
ENTERO               : 14 18
ENTEROVAL            : 8 86
ENTONCES             : 51
ESCRIBIR             : 48
FLOTANTE             : 15 19
FLOTANTEVAL          : 87
FUNCION              : 11
HACER                : 54 55
HASTA                : 55
ID                   : 1 6 7 8 11 21 43 44 45 47 56 84 85
IGUAL                : 43 44 56
IGUALQUE             : 67
LEER                 : 47
LETRERO              : 50
L_CORCHETE           : 8 44 85
L_LLAVE              : 29
L_PAR                : 1 11 45 46 47 48 51 54 55 83
MAS                  : 57
MAYORIGUALQUE        : 66
MAYORQUE             : 64
MENORIGUALQUE        : 65
MENORQUE             : 63
MENOS                : 58
MIENTRAS             : 54
MULT                 : 59
OR                   : 61
PRINCIPAL            : 1
PROGRAMA             : 1
PUNTO                : 
PUNTOYCOMA           : 1 7 8 34 35 36 37 38
REGRESA              : 46
R_CORCHETE           : 8 44 85
R_LLAVE              : 29
R_PAR                : 1 11 45 46 47 48 51 54 55 83
SI                   : 51
SINO                 : 52
VARIABLES            : 2
VOID                 : 17
error                : 

Nonterminals, with rules where they appear

asignacion           : 34
asignacionFor        : 55
bloque               : 1 11 51 52 54 55
bloqueD              : 30
bloqueU              : 29 32
condicional          : 40
decision             : 39
decisionU            : 51
empty                : 1 3 5 10 13 14 15 16 17 18 19 20 21 22 23 24 25 26 27 28 29 30 31 32 33 34 35 36 37 38 39 40 41 42 43 44 45 46 47 48 49 50 51 52 53 54 55 56 57 58 59 60 61 62 63 64 65 66 67 68 70 71 73 74 77 80 81 82 83 84 85 86 87 88
escritura            : 38
escrituraD           : 48
estatuto             : 30
exp                  : 72 76
expU                 : 75
factor               : 78
funciones            : 1 12
funcionesD           : 11
funcionesU           : 9
getCMemoria          : 
getGMemoria          : 
getLMemoria          : 
hiper_exp            : 25 43 44 44 46 49 51 54 55 56 70 83 85
hiper_expU           : 69
lectura              : 37
llamada              : 35 82
mandar_parametros    : 27 45
mandar_parametrosD   : 25
neu_addArreglo       : 8
neu_addConstanteCaracter : 88
neu_addConstanteEntero : 86
neu_addConstanteFlotante : 87
neu_addFuncion       : 11
neu_addID            : 43 84
neu_addIDArreglo     : 44 85
neu_addIDFor         : 56
neu_addOperador      : 43 44 56 57 58 59 60 61 62 63 64 65 66 67 68
neu_addTermino       : 
neu_addVariable      : 7
neu_addVariableAStack : 6
neu_asignacion       : 43 44
neu_asignacionFor    : 56
neu_boolFor          : 55
neu_condicionalAntes : 54
neu_condicionalDespues : 54
neu_condicionalDurante : 54
neu_endCondicion     : 55
neu_endDecision      : 51
neu_endFuncion       : 11
neu_endPrograma      : 1
neu_esEstatuto       : 35
neu_esExpresion      : 82
neu_escritura        : 49
neu_fondoFalso       : 44 85
neu_hacerExp         : 75
neu_hacerHiperExp    : 69
neu_hacerSuperExp    : 72
neu_hacerTermino     : 78
neu_iniciarDecision  : 51
neu_iniciarDecisionElse : 52
neu_lectura          : 47
neu_letrero          : 50
neu_llamada_era      : 45
neu_llamada_gosub    : 45
neu_paramValidacion  : 45
neu_parametroEnviado : 25
neu_principal        : 1
neu_programa         : 1
neu_recibirParametros : 21
neu_retorno          : 46
neu_vaciarPilas      : 30
no_condicional       : 41
notifError           : 
operadorA            : 76
operadorL            : 70
operadorR            : 73
operadorT            : 79
program              : 0
recibir_parametros   : 11 23
recibir_parametrosD  : 21
retorno              : 36
super_exp            : 69 73
super_expU           : 72
termino              : 75 79
terminoU             : 78
tipo_funcion         : 11
tipo_var             : 7 8 21
varcte               : 81
variables            : 1 11
variablesD           : 4 6
variablesU           : 2 7 8

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . PROGRAMA ID neu_programa PUNTOYCOMA variables funciones PRINCIPAL neu_principal L_PAR R_PAR bloque neu_endPrograma empty

    PROGRAMA        shift and go to state 2

    program                        shift and go to state 1

state 1

    (0) S' -> program .



state 2

    (1) program -> PROGRAMA . ID neu_programa PUNTOYCOMA variables funciones PRINCIPAL neu_principal L_PAR R_PAR bloque neu_endPrograma empty

    ID              shift and go to state 3


state 3

    (1) program -> PROGRAMA ID . neu_programa PUNTOYCOMA variables funciones PRINCIPAL neu_principal L_PAR R_PAR bloque neu_endPrograma empty
    (90) neu_programa -> .

    PUNTOYCOMA      reduce using rule 90 (neu_programa -> .)

    neu_programa                   shift and go to state 4

state 4

    (1) program -> PROGRAMA ID neu_programa . PUNTOYCOMA variables funciones PRINCIPAL neu_principal L_PAR R_PAR bloque neu_endPrograma empty

    PUNTOYCOMA      shift and go to state 5


state 5

    (1) program -> PROGRAMA ID neu_programa PUNTOYCOMA . variables funciones PRINCIPAL neu_principal L_PAR R_PAR bloque neu_endPrograma empty
    (2) variables -> . VARIABLES variablesU
    (3) variables -> . empty
    (89) empty -> .

    VARIABLES       shift and go to state 8
    ENTERO          reduce using rule 89 (empty -> .)
    FLOTANTE        reduce using rule 89 (empty -> .)
    CARACTER        reduce using rule 89 (empty -> .)
    VOID            reduce using rule 89 (empty -> .)
    PRINCIPAL       reduce using rule 89 (empty -> .)

    variables                      shift and go to state 6
    empty                          shift and go to state 7

state 6

    (1) program -> PROGRAMA ID neu_programa PUNTOYCOMA variables . funciones PRINCIPAL neu_principal L_PAR R_PAR bloque neu_endPrograma empty
    (9) funciones -> . funcionesU
    (10) funciones -> . empty
    (11) funcionesU -> . tipo_funcion FUNCION ID neu_addFuncion L_PAR recibir_parametros R_PAR variables bloque neu_endFuncion funcionesD
    (89) empty -> .
    (14) tipo_funcion -> . ENTERO empty
    (15) tipo_funcion -> . FLOTANTE empty
    (16) tipo_funcion -> . CARACTER empty
    (17) tipo_funcion -> . VOID empty

    PRINCIPAL       reduce using rule 89 (empty -> .)
    ENTERO          shift and go to state 13
    FLOTANTE        shift and go to state 14
    CARACTER        shift and go to state 15
    VOID            shift and go to state 16

    funciones                      shift and go to state 9
    empty                          shift and go to state 10
    funcionesU                     shift and go to state 11
    tipo_funcion                   shift and go to state 12

state 7

    (3) variables -> empty .

    ENTERO          reduce using rule 3 (variables -> empty .)
    FLOTANTE        reduce using rule 3 (variables -> empty .)
    CARACTER        reduce using rule 3 (variables -> empty .)
    VOID            reduce using rule 3 (variables -> empty .)
    PRINCIPAL       reduce using rule 3 (variables -> empty .)
    L_LLAVE         reduce using rule 3 (variables -> empty .)


state 8

    (2) variables -> VARIABLES . variablesU
    (4) variablesU -> . variablesD
    (5) variablesU -> . empty
    (6) variablesD -> . ID neu_addVariableAStack COMA variablesD
    (7) variablesD -> . ID DOSPUNTOS tipo_var neu_addVariable PUNTOYCOMA variablesU
    (8) variablesD -> . ID L_CORCHETE ENTEROVAL R_CORCHETE DOSPUNTOS tipo_var neu_addArreglo PUNTOYCOMA variablesU
    (89) empty -> .

    ID              shift and go to state 20
    ENTERO          reduce using rule 89 (empty -> .)
    FLOTANTE        reduce using rule 89 (empty -> .)
    CARACTER        reduce using rule 89 (empty -> .)
    VOID            reduce using rule 89 (empty -> .)
    PRINCIPAL       reduce using rule 89 (empty -> .)
    L_LLAVE         reduce using rule 89 (empty -> .)

    variablesU                     shift and go to state 17
    variablesD                     shift and go to state 18
    empty                          shift and go to state 19

state 9

    (1) program -> PROGRAMA ID neu_programa PUNTOYCOMA variables funciones . PRINCIPAL neu_principal L_PAR R_PAR bloque neu_endPrograma empty

    PRINCIPAL       shift and go to state 21


state 10

    (10) funciones -> empty .

    PRINCIPAL       reduce using rule 10 (funciones -> empty .)


state 11

    (9) funciones -> funcionesU .

    PRINCIPAL       reduce using rule 9 (funciones -> funcionesU .)


state 12

    (11) funcionesU -> tipo_funcion . FUNCION ID neu_addFuncion L_PAR recibir_parametros R_PAR variables bloque neu_endFuncion funcionesD

    FUNCION         shift and go to state 22


state 13

    (14) tipo_funcion -> ENTERO . empty
    (89) empty -> .

    FUNCION         reduce using rule 89 (empty -> .)

    empty                          shift and go to state 23

state 14

    (15) tipo_funcion -> FLOTANTE . empty
    (89) empty -> .

    FUNCION         reduce using rule 89 (empty -> .)

    empty                          shift and go to state 24

state 15

    (16) tipo_funcion -> CARACTER . empty
    (89) empty -> .

    FUNCION         reduce using rule 89 (empty -> .)

    empty                          shift and go to state 25

state 16

    (17) tipo_funcion -> VOID . empty
    (89) empty -> .

    FUNCION         reduce using rule 89 (empty -> .)

    empty                          shift and go to state 26

state 17

    (2) variables -> VARIABLES variablesU .

    ENTERO          reduce using rule 2 (variables -> VARIABLES variablesU .)
    FLOTANTE        reduce using rule 2 (variables -> VARIABLES variablesU .)
    CARACTER        reduce using rule 2 (variables -> VARIABLES variablesU .)
    VOID            reduce using rule 2 (variables -> VARIABLES variablesU .)
    PRINCIPAL       reduce using rule 2 (variables -> VARIABLES variablesU .)
    L_LLAVE         reduce using rule 2 (variables -> VARIABLES variablesU .)


state 18

    (4) variablesU -> variablesD .

    ENTERO          reduce using rule 4 (variablesU -> variablesD .)
    FLOTANTE        reduce using rule 4 (variablesU -> variablesD .)
    CARACTER        reduce using rule 4 (variablesU -> variablesD .)
    VOID            reduce using rule 4 (variablesU -> variablesD .)
    PRINCIPAL       reduce using rule 4 (variablesU -> variablesD .)
    L_LLAVE         reduce using rule 4 (variablesU -> variablesD .)


state 19

    (5) variablesU -> empty .

    ENTERO          reduce using rule 5 (variablesU -> empty .)
    FLOTANTE        reduce using rule 5 (variablesU -> empty .)
    CARACTER        reduce using rule 5 (variablesU -> empty .)
    VOID            reduce using rule 5 (variablesU -> empty .)
    PRINCIPAL       reduce using rule 5 (variablesU -> empty .)
    L_LLAVE         reduce using rule 5 (variablesU -> empty .)


state 20

    (6) variablesD -> ID . neu_addVariableAStack COMA variablesD
    (7) variablesD -> ID . DOSPUNTOS tipo_var neu_addVariable PUNTOYCOMA variablesU
    (8) variablesD -> ID . L_CORCHETE ENTEROVAL R_CORCHETE DOSPUNTOS tipo_var neu_addArreglo PUNTOYCOMA variablesU
    (96) neu_addVariableAStack -> .

    DOSPUNTOS       shift and go to state 28
    L_CORCHETE      shift and go to state 29
    COMA            reduce using rule 96 (neu_addVariableAStack -> .)

    neu_addVariableAStack          shift and go to state 27

state 21

    (1) program -> PROGRAMA ID neu_programa PUNTOYCOMA variables funciones PRINCIPAL . neu_principal L_PAR R_PAR bloque neu_endPrograma empty
    (94) neu_principal -> .

    L_PAR           reduce using rule 94 (neu_principal -> .)

    neu_principal                  shift and go to state 30

state 22

    (11) funcionesU -> tipo_funcion FUNCION . ID neu_addFuncion L_PAR recibir_parametros R_PAR variables bloque neu_endFuncion funcionesD

    ID              shift and go to state 31


state 23

    (14) tipo_funcion -> ENTERO empty .

    FUNCION         reduce using rule 14 (tipo_funcion -> ENTERO empty .)


state 24

    (15) tipo_funcion -> FLOTANTE empty .

    FUNCION         reduce using rule 15 (tipo_funcion -> FLOTANTE empty .)


state 25

    (16) tipo_funcion -> CARACTER empty .

    FUNCION         reduce using rule 16 (tipo_funcion -> CARACTER empty .)


state 26

    (17) tipo_funcion -> VOID empty .

    FUNCION         reduce using rule 17 (tipo_funcion -> VOID empty .)


state 27

    (6) variablesD -> ID neu_addVariableAStack . COMA variablesD

    COMA            shift and go to state 32


state 28

    (7) variablesD -> ID DOSPUNTOS . tipo_var neu_addVariable PUNTOYCOMA variablesU
    (18) tipo_var -> . ENTERO empty
    (19) tipo_var -> . FLOTANTE empty
    (20) tipo_var -> . CARACTER empty

    ENTERO          shift and go to state 34
    FLOTANTE        shift and go to state 35
    CARACTER        shift and go to state 36

    tipo_var                       shift and go to state 33

state 29

    (8) variablesD -> ID L_CORCHETE . ENTEROVAL R_CORCHETE DOSPUNTOS tipo_var neu_addArreglo PUNTOYCOMA variablesU

    ENTEROVAL       shift and go to state 37


state 30

    (1) program -> PROGRAMA ID neu_programa PUNTOYCOMA variables funciones PRINCIPAL neu_principal . L_PAR R_PAR bloque neu_endPrograma empty

    L_PAR           shift and go to state 38


state 31

    (11) funcionesU -> tipo_funcion FUNCION ID . neu_addFuncion L_PAR recibir_parametros R_PAR variables bloque neu_endFuncion funcionesD
    (92) neu_addFuncion -> .

    L_PAR           reduce using rule 92 (neu_addFuncion -> .)

    neu_addFuncion                 shift and go to state 39

state 32

    (6) variablesD -> ID neu_addVariableAStack COMA . variablesD
    (6) variablesD -> . ID neu_addVariableAStack COMA variablesD
    (7) variablesD -> . ID DOSPUNTOS tipo_var neu_addVariable PUNTOYCOMA variablesU
    (8) variablesD -> . ID L_CORCHETE ENTEROVAL R_CORCHETE DOSPUNTOS tipo_var neu_addArreglo PUNTOYCOMA variablesU

    ID              shift and go to state 20

    variablesD                     shift and go to state 40

state 33

    (7) variablesD -> ID DOSPUNTOS tipo_var . neu_addVariable PUNTOYCOMA variablesU
    (95) neu_addVariable -> .

    PUNTOYCOMA      reduce using rule 95 (neu_addVariable -> .)

    neu_addVariable                shift and go to state 41

state 34

    (18) tipo_var -> ENTERO . empty
    (89) empty -> .

    PUNTOYCOMA      reduce using rule 89 (empty -> .)
    COMA            reduce using rule 89 (empty -> .)
    R_PAR           reduce using rule 89 (empty -> .)

    empty                          shift and go to state 42

state 35

    (19) tipo_var -> FLOTANTE . empty
    (89) empty -> .

    PUNTOYCOMA      reduce using rule 89 (empty -> .)
    COMA            reduce using rule 89 (empty -> .)
    R_PAR           reduce using rule 89 (empty -> .)

    empty                          shift and go to state 43

state 36

    (20) tipo_var -> CARACTER . empty
    (89) empty -> .

    PUNTOYCOMA      reduce using rule 89 (empty -> .)
    COMA            reduce using rule 89 (empty -> .)
    R_PAR           reduce using rule 89 (empty -> .)

    empty                          shift and go to state 44

state 37

    (8) variablesD -> ID L_CORCHETE ENTEROVAL . R_CORCHETE DOSPUNTOS tipo_var neu_addArreglo PUNTOYCOMA variablesU

    R_CORCHETE      shift and go to state 45


state 38

    (1) program -> PROGRAMA ID neu_programa PUNTOYCOMA variables funciones PRINCIPAL neu_principal L_PAR . R_PAR bloque neu_endPrograma empty

    R_PAR           shift and go to state 46


state 39

    (11) funcionesU -> tipo_funcion FUNCION ID neu_addFuncion . L_PAR recibir_parametros R_PAR variables bloque neu_endFuncion funcionesD

    L_PAR           shift and go to state 47


state 40

    (6) variablesD -> ID neu_addVariableAStack COMA variablesD .

    ENTERO          reduce using rule 6 (variablesD -> ID neu_addVariableAStack COMA variablesD .)
    FLOTANTE        reduce using rule 6 (variablesD -> ID neu_addVariableAStack COMA variablesD .)
    CARACTER        reduce using rule 6 (variablesD -> ID neu_addVariableAStack COMA variablesD .)
    VOID            reduce using rule 6 (variablesD -> ID neu_addVariableAStack COMA variablesD .)
    PRINCIPAL       reduce using rule 6 (variablesD -> ID neu_addVariableAStack COMA variablesD .)
    L_LLAVE         reduce using rule 6 (variablesD -> ID neu_addVariableAStack COMA variablesD .)


state 41

    (7) variablesD -> ID DOSPUNTOS tipo_var neu_addVariable . PUNTOYCOMA variablesU

    PUNTOYCOMA      shift and go to state 48


state 42

    (18) tipo_var -> ENTERO empty .

    PUNTOYCOMA      reduce using rule 18 (tipo_var -> ENTERO empty .)
    COMA            reduce using rule 18 (tipo_var -> ENTERO empty .)
    R_PAR           reduce using rule 18 (tipo_var -> ENTERO empty .)


state 43

    (19) tipo_var -> FLOTANTE empty .

    PUNTOYCOMA      reduce using rule 19 (tipo_var -> FLOTANTE empty .)
    COMA            reduce using rule 19 (tipo_var -> FLOTANTE empty .)
    R_PAR           reduce using rule 19 (tipo_var -> FLOTANTE empty .)


state 44

    (20) tipo_var -> CARACTER empty .

    PUNTOYCOMA      reduce using rule 20 (tipo_var -> CARACTER empty .)
    COMA            reduce using rule 20 (tipo_var -> CARACTER empty .)
    R_PAR           reduce using rule 20 (tipo_var -> CARACTER empty .)


state 45

    (8) variablesD -> ID L_CORCHETE ENTEROVAL R_CORCHETE . DOSPUNTOS tipo_var neu_addArreglo PUNTOYCOMA variablesU

    DOSPUNTOS       shift and go to state 49


state 46

    (1) program -> PROGRAMA ID neu_programa PUNTOYCOMA variables funciones PRINCIPAL neu_principal L_PAR R_PAR . bloque neu_endPrograma empty
    (29) bloque -> . L_LLAVE bloqueU R_LLAVE empty

    L_LLAVE         shift and go to state 51

    bloque                         shift and go to state 50

state 47

    (11) funcionesU -> tipo_funcion FUNCION ID neu_addFuncion L_PAR . recibir_parametros R_PAR variables bloque neu_endFuncion funcionesD
    (21) recibir_parametros -> . ID DOSPUNTOS tipo_var neu_recibirParametros recibir_parametrosD empty
    (22) recibir_parametros -> . empty
    (89) empty -> .

    ID              shift and go to state 52
    R_PAR           reduce using rule 89 (empty -> .)

    recibir_parametros             shift and go to state 53
    empty                          shift and go to state 54

state 48

    (7) variablesD -> ID DOSPUNTOS tipo_var neu_addVariable PUNTOYCOMA . variablesU
    (4) variablesU -> . variablesD
    (5) variablesU -> . empty
    (6) variablesD -> . ID neu_addVariableAStack COMA variablesD
    (7) variablesD -> . ID DOSPUNTOS tipo_var neu_addVariable PUNTOYCOMA variablesU
    (8) variablesD -> . ID L_CORCHETE ENTEROVAL R_CORCHETE DOSPUNTOS tipo_var neu_addArreglo PUNTOYCOMA variablesU
    (89) empty -> .

    ID              shift and go to state 20
    ENTERO          reduce using rule 89 (empty -> .)
    FLOTANTE        reduce using rule 89 (empty -> .)
    CARACTER        reduce using rule 89 (empty -> .)
    VOID            reduce using rule 89 (empty -> .)
    PRINCIPAL       reduce using rule 89 (empty -> .)
    L_LLAVE         reduce using rule 89 (empty -> .)

    variablesU                     shift and go to state 55
    variablesD                     shift and go to state 18
    empty                          shift and go to state 19

state 49

    (8) variablesD -> ID L_CORCHETE ENTEROVAL R_CORCHETE DOSPUNTOS . tipo_var neu_addArreglo PUNTOYCOMA variablesU
    (18) tipo_var -> . ENTERO empty
    (19) tipo_var -> . FLOTANTE empty
    (20) tipo_var -> . CARACTER empty

    ENTERO          shift and go to state 34
    FLOTANTE        shift and go to state 35
    CARACTER        shift and go to state 36

    tipo_var                       shift and go to state 56

state 50

    (1) program -> PROGRAMA ID neu_programa PUNTOYCOMA variables funciones PRINCIPAL neu_principal L_PAR R_PAR bloque . neu_endPrograma empty
    (91) neu_endPrograma -> .

    $end            reduce using rule 91 (neu_endPrograma -> .)

    neu_endPrograma                shift and go to state 57

state 51

    (29) bloque -> L_LLAVE . bloqueU R_LLAVE empty
    (30) bloqueU -> . estatuto bloqueD neu_vaciarPilas empty
    (31) bloqueU -> . empty
    (34) estatuto -> . asignacion PUNTOYCOMA empty
    (35) estatuto -> . llamada neu_esEstatuto PUNTOYCOMA empty
    (36) estatuto -> . retorno PUNTOYCOMA empty
    (37) estatuto -> . lectura PUNTOYCOMA empty
    (38) estatuto -> . escritura PUNTOYCOMA empty
    (39) estatuto -> . decision empty
    (40) estatuto -> . condicional empty
    (41) estatuto -> . no_condicional empty
    (42) estatuto -> . empty
    (89) empty -> .
    (43) asignacion -> . ID neu_addID IGUAL neu_addOperador hiper_exp neu_asignacion empty
    (44) asignacion -> . ID L_CORCHETE neu_fondoFalso hiper_exp R_CORCHETE neu_addIDArreglo IGUAL neu_addOperador hiper_exp neu_asignacion empty
    (45) llamada -> . ID neu_llamada_era L_PAR mandar_parametros neu_paramValidacion R_PAR neu_llamada_gosub empty
    (46) retorno -> . REGRESA L_PAR hiper_exp neu_retorno R_PAR empty
    (47) lectura -> . LEER L_PAR ID neu_lectura R_PAR empty
    (48) escritura -> . ESCRIBIR L_PAR escrituraD R_PAR empty
    (51) decision -> . SI L_PAR hiper_exp R_PAR neu_iniciarDecision ENTONCES bloque decisionU neu_endDecision empty
    (54) condicional -> . MIENTRAS L_PAR neu_condicionalAntes hiper_exp neu_condicionalDurante R_PAR HACER bloque neu_condicionalDespues empty
    (55) no_condicional -> . DESDE L_PAR asignacionFor R_PAR HASTA hiper_exp neu_boolFor HACER bloque neu_endCondicion empty

  ! shift/reduce conflict for ID resolved as shift
  ! shift/reduce conflict for REGRESA resolved as shift
  ! shift/reduce conflict for LEER resolved as shift
  ! shift/reduce conflict for ESCRIBIR resolved as shift
  ! shift/reduce conflict for SI resolved as shift
  ! shift/reduce conflict for MIENTRAS resolved as shift
  ! shift/reduce conflict for DESDE resolved as shift
    R_LLAVE         reduce using rule 89 (empty -> .)
    ID              shift and go to state 69
    REGRESA         shift and go to state 70
    LEER            shift and go to state 71
    ESCRIBIR        shift and go to state 72
    SI              shift and go to state 73
    MIENTRAS        shift and go to state 74
    DESDE           shift and go to state 75

  ! ID              [ reduce using rule 89 (empty -> .) ]
  ! REGRESA         [ reduce using rule 89 (empty -> .) ]
  ! LEER            [ reduce using rule 89 (empty -> .) ]
  ! ESCRIBIR        [ reduce using rule 89 (empty -> .) ]
  ! SI              [ reduce using rule 89 (empty -> .) ]
  ! MIENTRAS        [ reduce using rule 89 (empty -> .) ]
  ! DESDE           [ reduce using rule 89 (empty -> .) ]

    bloqueU                        shift and go to state 58
    empty                          shift and go to state 59
    estatuto                       shift and go to state 60
    asignacion                     shift and go to state 61
    llamada                        shift and go to state 62
    retorno                        shift and go to state 63
    lectura                        shift and go to state 64
    escritura                      shift and go to state 65
    decision                       shift and go to state 66
    condicional                    shift and go to state 67
    no_condicional                 shift and go to state 68

state 52

    (21) recibir_parametros -> ID . DOSPUNTOS tipo_var neu_recibirParametros recibir_parametrosD empty

    DOSPUNTOS       shift and go to state 76


state 53

    (11) funcionesU -> tipo_funcion FUNCION ID neu_addFuncion L_PAR recibir_parametros . R_PAR variables bloque neu_endFuncion funcionesD

    R_PAR           shift and go to state 77


state 54

    (22) recibir_parametros -> empty .

    R_PAR           reduce using rule 22 (recibir_parametros -> empty .)


state 55

    (7) variablesD -> ID DOSPUNTOS tipo_var neu_addVariable PUNTOYCOMA variablesU .
